--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "antd": "^5.24.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
